# rust-qif-parser

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  package-lock.json
benches/: benchmark.rs
data/: amex.qif  cic.qif  example1.qif  monzo.qif  nasty.qif  wikipedia_investments.qif  wikipedia_simple.qif
node/: index.js  package-lock.json  package.json
src/: date.rs  errors.rs  investment.rs  lib.rs  main.rs  parser.rs  qif.rs  split.rs  transaction.rs
tests/: integration_test.rs
