[package]
name = "qif_parser"
description = "This library parses Quicken Interchange Format (QIF) files"
license-file = "LICENSE"
version = "0.0.1"
authors = ["Antoine Jaussoin <antoine@jaussoin.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
