[package]
name = "qif_parser"
description = "This library parses Quicken Interchange Format (QIF) files"
license = "MIT"
version = "0.0.5"
authors = ["Antoine Jaussoin <antoine@jaussoin.com>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/antoinejaussoin/rust-qif-parser"
keywords = ["QIF", "Quicken", "Interchange", "parser"]
categories = ["parser-implementations"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
